<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <HorizontalScrollView
        android:id="@+id/hscroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <EditText
        android:id="@+id/name_acc8"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/borders_editing"
        android:ems="10"
        android:inputType="text"
        android:hint="***********@mail.com"
        android:fontFamily="@font/roboto_medium"
        android:textColor="#3A3A3A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_number_phone" />

    <EditText

        android:id="@+id/ET_number_phone"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/borders_editing"
        android:ems="10"
        android:inputType="number"
        android:hint="+7(999)999-99-99"
        android:fontFamily="@font/roboto_medium"
        android:textColor="#3A3A3A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_name" />

    <TextView
        android:id="@+id/lablename7"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="Confirm Password"
        app:layout_constraintBottom_toTopOf="@+id/ET_confirm_pass"
        app:layout_constraintStart_toStartOf="@+id/ET_confirm_pass" />

    <EditText
        android:id="@+id/ET_password"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/borders_editing"
        android:ems="10"
        android:drawableEnd="@drawable/eye_slash"
        android:hint="**********"
        android:inputType="textPassword"
        android:textColor="#3A3A3A"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_acc8" />

    <TextView
        android:id="@+id/lablename8"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="Email Address"
        app:layout_constraintBottom_toTopOf="@+id/name_acc8"
        app:layout_constraintStart_toStartOf="@+id/ET_confirm_pass" />

    <TextView
        android:id="@+id/lablename3"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="Phone number"
        app:layout_constraintBottom_toTopOf="@+id/ET_number_phone"
        app:layout_constraintStart_toStartOf="@+id/ET_confirm_pass" />

    <EditText
        android:id="@+id/ET_name"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="57dp"
        android:background="@drawable/borders_editing"
        android:ems="10"
        android:inputType="text"
        android:hint="Name"
        android:fontFamily="@font/roboto_medium"
        android:textColor="#3A3A3A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complete_th" />

    <TextView
        android:id="@+id/lablename4"
        android:layout_width="62dp"
        android:layout_height="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/lablename"
        app:layout_constraintBottom_toTopOf="@+id/ET_name"
        app:layout_constraintStart_toStartOf="@+id/ET_confirm_pass" />

    <TextView
        android:id="@+id/create_an_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/create_an_a"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_medium"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/complete_th"
        android:layout_width="275dp"
        android:layout_height="16dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/complete_th"
        android:textAppearance="@style/complete_th"
        app:layout_constraintStart_toStartOf="@+id/create_an_a"
        app:layout_constraintTop_toBottomOf="@+id/create_an_a" />

    <TextView
        android:id="@+id/lablename"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="Password"
        app:layout_constraintBottom_toTopOf="@+id/ET_password"
        app:layout_constraintStart_toStartOf="@+id/ET_confirm_pass" />

    <EditText
        android:id="@+id/ET_confirm_pass"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/borders_editing"
        android:ems="10"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/eye_slash"
        android:hint="**********"

        android:fontFamily="@font/roboto_medium"
        android:textColor="#3A3A3A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_password" />

        <Button
            android:id="@+id/BT_SignUp"
            android:layout_width="342dp"
            android:layout_height="46dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="122dp"
            android:background="@drawable/borders_button"
            app:backgroundTint="#A7A7A7"
            android:fontFamily="@font/roboto_medium"
            android:text="Sign Up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yourCheckBoxId" />

        <TextView
            android:id="@+id/have_accaont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="top"
            android:lineSpacingExtra="0sp"
            android:text="@string/already_hav"
            android:textAppearance="@style/already_hav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BT_SignUp" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/sign_in"
        android:fontFamily="@font/roboto_medium"
        android:textAppearance="@style/sign_in"
        app:layout_constraintBottom_toBottomOf="@+id/have_accaont"
        app:layout_constraintStart_toEndOf="@+id/have_accaont"
        app:layout_constraintTop_toTopOf="@+id/have_accaont" />

    <TextView
        android:id="@+id/or_sign_in_"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="or sign in using"
        android:fontFamily="@font/roboto_medium"
        android:textAppearance="@style/already_hav"
        app:layout_constraintEnd_toEndOf="@+id/BT_SignUp"
        app:layout_constraintStart_toStartOf="@+id/BT_SignUp"
        app:layout_constraintTop_toBottomOf="@+id/have_accaont" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/have_accaont"
            app:layout_constraintStart_toStartOf="@+id/have_accaont"
            app:layout_constraintTop_toBottomOf="@+id/or_sign_in_"
            app:srcCompat="@drawable/google_znachok" />

        <CheckBox
            android:id="@+id/yourCheckBoxId"
            style="@style/BlueCheckBoxStyle"
            android:layout_width="282dp"
            android:layout_height="28dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="69dp"
            android:textSize="12dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_horizontal|top"
            android:text="By ticking this box, you agree to our Terms and conditions and private policy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/ET_confirm_pass" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>
</ScrollView>